OO-3296: implementation relation repository entry to organisation